--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "@angular/platform-browser": "^4.0.1",
     "@angular/platform-browser-dynamic": "^4.0.1",
     "@angular/router": "^4.0.1",
+    "angularfire2": "^2.0.0-beta.8",
+    "firebase": "^3.7.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
     "redux-observable": "^0.14.1",
