--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Bikes app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/.bin/jest",
+    "test:watch": "node_modules/.bin/jest --watch",
+    "typings": "node_modules/.bin/typings install",
+    "test:ci": "jest --runInBand",
     "start": "npm run start:dev",
-    "start:dev": "./node_modules/.bin/webpack-dev-server --port=3000 --inline --hot"
+    "start:dev": "node_modules/.bin/webpack-dev-server --port=3000 --inline --hot"
   },
   "repository": {
     "type": "git",
@@ -24,10 +27,32 @@
     "url": "https://github.com/vanluke/ng2-bikes/issues"
   },
   "homepage": "https://github.com/vanluke/ng2-bikes#readme",
+  "jest": {
+    "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/client/jest-style-mock.js"
+    },
+    "globals": {
+      "__TS_CONFIG__": "<rootDir>/tsconfig.json"
+    },
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js",
+      "^.+\\.js$": "babel-jest"
+    },
+    "setupTestFrameworkScriptFile": "<rootDir>/client/setup-jest.ts",
+    "testRegex": "(\\**.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
+  },
   "devDependencies": {
+    "@types/jest": "^19.2.2",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.23.0",
@@ -39,13 +64,18 @@
     "file-loader": "^0.11.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "jest": "^19.0.2",
+    "jest-preset-angular": "0.0.13",
     "json-loader": "^0.5.4",
     "node-sass": "^4.5.2",
+    "postcss-loader": "^1.3.3",
     "precss": "^1.4.0",
     "reflect-metadata": "^0.1.10",
+    "regenerator-runtime": "^0.10.3",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "ts-helpers": "^1.1.2",
+    "ts-jest": "^19.0.8",
     "ts-loader": "^2.0.3",
     "tslint-config-airbnb": "^1.1.1",
     "tslint-loader": "^3.4.3",
@@ -66,7 +96,7 @@
     "@angular/platform-browser-dynamic": "^4.0.1",
     "@angular/router": "^4.0.1",
     "angularfire2": "^2.0.0-beta.8",
-    "firebase": "^3.7.4",
+    "firebase": "^3.7.5",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
     "redux-observable": "^0.14.1",
