--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Bikes app",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/jest",
-    "test:watch": "node_modules/.bin/jest --watch",
+    "test": "NODE_ENV=test node_modules/.bin/jest",
+    "test:watch": "NODE_ENV=test node_modules/.bin/jest --watch",
     "typings": "node_modules/.bin/typings install",
-    "test:ci": "jest --runInBand",
+    "test:ci": "NODE_ENV=test node_modules/.bin/jest --runInBand",
     "start": "npm run start:dev",
-    "start:dev": "node_modules/.bin/webpack-dev-server --port=3000 --inline --hot"
+    "start:dev": "NODE_ENV=development node_modules/.bin/webpack-dev-server --port=3000 --inline --hot",
+    "start:server": "NODE_ENV=development node_modules/.bin/nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -68,6 +69,7 @@
     "jest-preset-angular": "0.0.13",
     "json-loader": "^0.5.4",
     "node-sass": "^4.5.2",
+    "nodemon": "^1.11.0",
     "postcss-loader": "^1.3.3",
     "precss": "^1.4.0",
     "reflect-metadata": "^0.1.10",
@@ -95,12 +97,23 @@
     "@angular/platform-browser": "^4.0.1",
     "@angular/platform-browser-dynamic": "^4.0.1",
     "@angular/router": "^4.0.1",
-    "angularfire2": "^2.0.0-beta.8",
+    "convict": "^3.0.0",
     "firebase": "^3.7.5",
+    "koa": "^2.2.0",
+    "koa-cors": "0.0.16",
+    "koa-json": "^2.0.2",
+    "koa-jwt": "^3.2.1",
+    "koa-mount": "^3.0.0",
+    "koa-route": "^3.2.0",
+    "koa-router": "^7.1.1",
+    "koa-socket": "^4.4.0",
+    "koa-static": "^3.0.0",
+    "koa.io": "0.0.3",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
     "redux-observable": "^0.14.1",
     "rxjs": "^5.2.1-smooth",
-    "seamless-immutable": "^7.1.2"
+    "seamless-immutable": "^7.1.2",
+    "superagent": "^3.5.2"
   }
 }
